# ScalaCheckBookExamplesInQuickCheck

./: README.md  ScalaCheckBookExamplesInQuickCheck.cabal
Chapter4/RunLengthEncoding/: RunLengthEncoding.hs  RunLengthEncodingTests.hs  RunLengthEncodingTests2.hs
Chapter5/Interleaving/: Interleaving.hs  InterleavingTests.hs
ScalaCheckBits/: ScalaCheckBits.hs
src/Chapter4/RunLengthEncoding/: RunLengthEncoding.hs
src/Chapter5/: ClassifyingTestStatistics.hs  CollectingTestStatistics.hs
src/Chapter5/Interleaving/: Interleaving.hs
src/Chapter6/: CustomTestCaseSimplification.hs
src/Chapter6/CustomTestCaseSimplification/: Test.hs
src/Chapter6/HigherOrderGenerators/: NumberGen.hs  Samples.hs
src/Chapter6/RecursiveGenerators/: IntTreeSample.hs
