name:                ScalaCheckBookExamplesInQuickCheck
version:             0.1.0.0
author:              Jonathan Taylor
maintainer:          jonathan.taylor@dsl.pipex.com
build-type:          Simple
cabal-version:       >= 1.10

library
    exposed-modules:    Chapter4.RunLengthEncoding.RunLengthEncoding,
                        Chapter5.Interleaving.Interleaving,
                        ScalaCheckBits.ScalaCheckBits
    build-depends:      base >=4.7 && <4.8, QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite Chapter4.RunLengthEncoding.tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     Chapter4/RunLengthEncoding
    main-is:            RunLengthEncodingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010

test-suite Chapter5.RunLengthEncoding.tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     Chapter5/Interleaving
    main-is:            InterleavingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010
