name:                ScalaCheckBookExamplesInQuickCheck
version:             0.1.0.0
author:              Jonathan Taylor
maintainer:          jonathan.taylor@dsl.pipex.com
build-type:          Simple
cabal-version:       >= 1.10

library
    exposed-modules:    Chapter4.RunLengthEncoding.RunLengthEncoding,
                        -- Chapter4.RunLengthEncoding.RunLengthEncodingTests2,
                        Chapter5.Interleaving.Interleaving,
                        ScalaCheckBits.ScalaCheckBits
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
                        -- , Cabal ==1.18.*
    default-language:   Haskell2010

test-suite RunLengthEncodingTests
    type:               exitcode-stdio-1.0
    main-is:            Chapter4\RunLengthEncoding\RunLengthEncodingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010

-- test-suite RunLengthEncodingTests2
--     type:               detailed-0.9
--     test-module:        Chapter4.RunLengthEncoding.RunLengthEncodingTests2
--     build-depends:      base >=4.7 && <4.8,
--                         QuickCheck >=2.6 && <2.7,
--                         ScalaCheckBookExamplesInQuickCheck,
--                         Cabal ==1.18.*
--     default-language:   Haskell2010

test-suite InterleavingTests
    type:               exitcode-stdio-1.0
    main-is:            Chapter5\Interleaving\InterleavingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010
