name:                ScalaCheckBookExamplesInQuickCheck
version:             0.1.0.0
author:              Jonathan Taylor
maintainer:          jonathan.taylor@dsl.pipex.com
build-type:          Simple
cabal-version:       >= 1.10

library
    hs-source-dirs:     src
    exposed-modules:    Chapter4.RunLengthEncoding.RunLengthEncoding,
                        Chapter5.Interleaving.Interleaving,
                        ScalaCheckBits.ScalaCheckBits
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite RunLengthEncodingTests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter4\RunLengthEncoding\RunLengthEncodingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010

test-suite InterleavingTests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter5\Interleaving\InterleavingTests.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7,
                        ScalaCheckBookExamplesInQuickCheck
    default-language:   Haskell2010

test-suite ClassifyingTestStatistics
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter5\ClassifyingTestStatistics.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite CollectingTestStatistics
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter5\CollectingTestStatistics.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite RecursiveGenerators
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter6\RecursiveGenerators\IntTreeSample.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite CustomTestCaseSimplification
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter6\CustomTestCaseSimplification\Test.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite HigherOrderGeneratorsSamples
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter6\HigherOrderGenerators\Samples.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010

test-suite HigherOrderGeneratorsNumberGen
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src
    main-is:            Chapter6\HigherOrderGenerators\NumberGen.hs
    build-depends:      base >=4.7 && <4.8,
                        QuickCheck >=2.6 && <2.7
    default-language:   Haskell2010
